--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -1,5 +1,1 @@
-sonar-scanner \
-  -Dsonar.projectKey=DKU_CHURN \
-  -Dsonar.sources=. \
-  -Dsonar.host.url=http://localhost:9000 \
-  -Dsonar.login=3497b5e1136a7fbf951fed8480e894ed4cf53662
+sonar-scanner -Dsonar.projectKey=DKU_CHURN -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=3497b5e1136a7fbf951fed8480e894ed4cf53662
